# bumping

./: .travis.yml  CHANGELOG.md  Pipfile  README.md  run.py  setup.cfg  setup.py
bumping/: __init__.py  bumping.py  test.py
