[metadata]
name = bumping
author = wqy
author_email = qiyingwangwqy@gmail.com
description = Python tool to calculate SemVer based on conventional git commit messages.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/WqyJh/bumping
keywords = git, conventionalcommits, SemVer
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3 :: Only


[options]
include_package_data = True
packages = find:


[options.package_data]
* = *.txt, *.rst, *.md
